# spotijay

./: .env  .gitignore  Cargo.toml  Procfile  README.md
.github/: ci.yml
.github/workflows/: ci.yml  release.yml
migrations/: V1__add_djs_table.sql  V2__add_rooms_table.sql  V3__add_tracks_table.sql  V4__add_playings.sql
shared/: Cargo.toml
shared/src/: lib.rs
spotijay/: Cargo.toml
spotijay/migrations/: V1__add_user_table.sql  V2__add_room.sql
spotijay/src/: lib.rs
spotijay/test_keys/: localhost.crt  localhost.key  testca.pem
webclient/: Cargo.toml  Makefile.toml  index.html  style.css
webclient/src/: lib.rs  main.rs  pages.rs  spotify.rs
