[package]
name = "spotijay"
version = "0.1.0"
authors = ["Håkon H. Lerring <hakon@lerring.no>"]
edition = "2018"

[[bin]]
name = "server"
[[bin]]
name = "client"

[dependencies]
refinery = {version = "0.2.1", features = ["rusqlite"]}
rustorm = {git = "https://github.com/edmellum/rustorm", features = ["with-sqlite"]}
rustorm_dao = {git = "https://github.com/edmellum/rustorm"}
rusqlite = "0.21.0"
log = "0.4"
env_logger = "0.7"
url = "2.1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
async-tungstenite = { version = "0.4.0", features = ["tokio-runtime"] }
tungstenite = "0.10.1"
async-std = "1.5.0"
serde_json = "1.0.48"
