[package]
name = "spotijay"
version = "0.1.0"
authors = ["Håkon H. Lerring <hakon@lerring.no>"]
edition = "2018"

[[bin]]
name = "server"
[[bin]]
name = "client"

[dependencies]
shared = {path = "../shared"}
refinery = {version = "0.2.1", features = ["rusqlite"]}
rustorm = {git = "https://github.com/edmellum/rustorm", features = ["with-sqlite"]}
rustorm_dao = {git = "https://github.com/edmellum/rustorm"}
rusqlite = "0.21.0"
log = "0.4"
env_logger = "0.7"
url = "2.1.0"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
async-tungstenite = { version = "0.4.0", features = ["async-std-runtime", "async-tls"] }
tungstenite = "0.10.1"
async-std = "1.5.0"
rspotify = {git = "https://github.com/edmellum/rspotify", features = ["blocking"]}
reqwest = {version = "0.10", features = ["blocking"]}
futures-timer = "3.0.2"
dotenv = "0.15.0"
async-tls = "0.7.0"
rustls = "0.17.0"
