[package]
name = "spotijay"
version = "0.1.0"
authors = ["Håkon H. Lerring <hakon@lerring.no>"]
edition = "2018"

[[bin]]
name = "server"
[[bin]]
name = "client"

[dependencies]
shared = {path = "../shared"}

log = "0.4"
url = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3.4"
futures-timer = "3.0.2"
async-std = "1.5.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

r2d2 = "0.8.8"
r2d2_sqlite = {git = "https://github.com/edmellum/r2d2-sqlite", branch = "patch-1"}
refinery = {git = "https://github.com/edmellum/refinery", features = ["rusqlite-bundled"], branch = "patch-1"}
rusqlite = {version = "0.23.0", features = ["bundled", "array", "serde_json"]}

rustls = "0.17.0"
async-tls = "0.7.0"
tungstenite = "0.10.1"
async-tungstenite = { version = "0.4.0", features = ["async-std-runtime", "async-tls"] }

rspotify = {git = "https://github.com/edmellum/rspotify", features = ["blocking"]}