[package]
name = "webclient"
version = "0.1.0"
authors = ["Håkon H. Lerring <hakon@lerring.no>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
url = "2.1.0"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"
dotenv_codegen = "0.15.0"
console_log = "0.1.2"
gloo = "0.2.1"
log = "0.4.8"
wasm-bindgen-futures = "0.4.9"

[dependencies.web-sys]
version = "0.3.36"
features = [
    "Window",
    "Location",
    "History",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "MouseEvent",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "HtmlInputElement",
    "InputEvent",
    "Event"
]
