[package]
name = "webclient"
version = "0.1.0"
authors = ["Håkon H. Lerring <hakon@lerring.no>"]
edition = "2018"
description = "WASM frontend client for Spotijay"
repository = "https://github.com/Hakon/spotijay"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
shared = {path = "../shared"}
url = "2.1.0"
futures = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
wasm-bindgen = { version = "0.2.59", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
dotenv_codegen = "0.15.0"
console_log = "0.1.2"
gloo = { version = "0.2.1", features = ["futures"] }
log = "0.4.8"
wasm-bindgen-futures = "0.4.9"
js-sys = "0.3.37"
seed = "0.6.0"

[dependencies.web-sys]
version = "0.3.36"
features = [
    "Window",
    "Location",
    "History",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Storage",
    "EventTarget",
    "MouseEvent",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "HtmlInputElement",
    "InputEvent",
    "Event",
    "ErrorEvent",
    "MessageEvent",
    "WebSocket",
]
